--- a/client/styles.css
+++ b/client/styles.css
@@ -2,14 +2,21 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Bungee Hairline', cursive;
 }
 
 body {
     background: black;
   }
+
+h1,
+h2,
+h3 {
+    font-family: 'Bungee Outline', cursive;
+}
   
 header {
-    background: white;
+    background: rgba(0, 0, 0, 0.5);
     height: 80px;
     position: fixed;
     top: 0;
@@ -24,9 +31,35 @@ section {
 }
 
 #hero {
-    background: purple;
+    background: url("https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#hero h2 {
+    font-size: 5rem;
 }
 
 #content {
+    background: url("https://images.unsplash.com/photo-1498429089284-41f8cf3ffd39?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    color: white
+}
 
+aside {
+    background: rgba(0,0,0,0.75);
+    height: 100%;
+    width: 33%;
+}
+
+aside h3 {
+    font-size: 3rem;
+    color: rgb(255, 187, 0);
 }
