--- a/client/styles.css
+++ b/client/styles.css
@@ -13,6 +13,7 @@ h1,
 h2,
 h3 {
     font-family: 'Bungee Outline', cursive;
+    line-height: 100%;
 }
   
 header {
@@ -22,7 +23,16 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    display: flex;
+    align-items: center;
+    transition: all 0.5s;
 
+}
+
+.shrink-header {
+    height: 40px;
+    color:rgb(154, 230, 110);
+    font-size: 0.7rem;
 }
 
 section {
